<?xml version="1.0"?>
<package format="2">
  <name>arviz</name>
  <version>0.0.1</version>
  <description>The arviz package</description>

  <maintainer email="yuya.ushiro@gmail.com">Yuya Suzuki</maintainer>
  <author email="yuya.ushiro@gmail.com">Yuya Suzuki</author>

  <license>MIT</license>

  <url type="repository">https://github.com/yuyaushiro/arviz_ros</url>
  <url type="bugtracker">https://github.com/yuyaushiro/arviz_ros/issues</url>
  <url type="website">https://github.com/yuyaushiro/arviz_ros/wiki</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>laser_geometry</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>laser_geometry</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>

  <export>

  </export>
</package>
